# YC_Todo

Upload_App_Store/: Description.txt  Keywords.txt  Permission.txt  Privacy.txt  What_I_Missed.txt
_HowToWork/: Improve_and_Workflow_Notes.txt  debug.txt  pull_from_OS.txt
my_react_test/: package-lock.json  package.json
my_react_test/src/: App.css  App.jsx
my_react_test/src-tauri/: Cargo.toml  entitlements.plist  tauri.conf.json
my_react_test/src-tauri/capabilities/: default.json
my_react_test/src-tauri/crates/tauri-plugin-nspopover/permissions/autogenerated/: reference.md
my_react_test/src-tauri/crates/tauri-plugin-nspopover/src/: lib.rs
my_react_test/src-tauri/icons/: icon.icns
my_react_test/src-tauri/src/: _v0.txt  _v1.txt  _v2.txt  _v3.txt  lib.rs
my_react_test/src/components/: CreateForm.jsx  EditForm.jsx  MinuteSelect.jsx  TagBar.jsx  TagManager.jsx  TagSelect.jsx  Todo.jsx  TodoWrapper.jsx
my_react_test/src/styles/: 00-reset.css  01-tokens.css  02-layout.css  03-header.css  04-create-form.css  05-minute-select.css  06-tag-select.css  07-now.css  08-todo.css  09-edit-form.css  10-completed.css  11-buttons.css  12-sound-panel.css  13-drag.css  14-shortcut.css  15-notification.css  99-responsive.css
