[package]
name = "app"
version = "0.1.2"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.3", features = [] }

[dependencies]
objc2-app-kit = "0.3.1"
image = "0.25"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.9.5", features = ["tray-icon"] }
tauri-plugin-log = "2"
tauri-plugin-positioner = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-global-shortcut = "2"
objc = "0.2"




# ✅ 只留这一条
# tauri-plugin-nspopover = { git = "https://github.com/freethinkel/tauri-nspopover-plugin git", version = "4.0.1" }
tauri-plugin-nspopover = { path = "crates/tauri-plugin-nspopover" }


[target.'cfg(target_os = "macos")'.dependencies]
objc2-app-kit = { version = "0.3.1", features = ["NSPopover", "NSStatusBarButton", "NSWindow"] }
objc2-foundation = "0.3.1"
objc2 = "0.6.1"
